<resources>
    <string name="app_name">Yuni</string>
    <string name="action_settings">Settings</string>
    <string name="minutes">minutes</string>

    <!--MenuItemFragment Related-->
    <string name="done">Done</string>
    <string name="itemAdded">Item has been added to database</string>
    <string name="itemModified">Item has been modified</string>

    <!--MenuItemListTab Related-->
    <string name="legacyAvailability">Availability</string>
    <string name="feedback">Feedback</string>
    <string name="view_more">View More</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="no_reviews">No Reviews Available!</string>

    <!--Feedback Dialog Related-->
    <string name="stars_0">Avoid</string>
    <string name="stars_1">Very Bad</string>
    <string name="stars_2">Bad</string>
    <string name="stars_3">Good</string>
    <string name="stars_4">Great</string>
    <string name="stars_5">Awesome, loved it</string>
    <string name="hintFeedback">Tell us what you thought</string>
    <string name="sendFeedback">Send Feedback</string>

    <!--Info Page-->
    <string name="info">Info</string>
    <string name="openingHours">Opening Hours</string>
    <string name="busyness">Busyness</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>

    <!-- Favorites -->
    <string name="favoritesAbbreviation">Favs</string>

    <!--Canteens page-->
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="help">Help</string>
    <string name="descriptionBox">Enter description here</string>

    <!--Busyness Ratings-->
    <string name="busy">Busy</string>
    <string name="moderate">Moderate</string>
    <string name="quiet">Quiet</string>
    <string name="unknown">Unknown</string>

    <!--Operating Status-->
    <string name="open">Open</string>
    <string name="closing">Closing</string>
    <string name="closed">Closed</string>
    <string name="nameDescrition" />
    <string name="stock_high">in  stock</string>
    <string name="stock_low">low stock</string>
    <string name="stock_out" >out of stock</string>
    <string name="stock">Stock:</string>
    <string name="set_availability_button">set availability</string>
    <string name="certainty">Are you sure?</string>
    <string name="remove_dish">remove dish</string>
    <string name="set_availability">Set availabilty:</string>
    <string name="set_schedule">set schedule</string>
    <string name="if_you_are_a_vitam_employee_please_login_using_the_button_below">If you are a VITAM employee, please login using the button below</string>
    <string name="login">Login</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_nec_ultrices_ipsum_in_condimentum_augue_phasellus_quis_tincidunt_augue_cras_iaculis_nibh_a_ex_ultrices_in_fermentum_odio_pretium_aliquam_nec_est_eu_sem_commodo_feugiat_sed_sit_amet_mauris_eu_lorem_efficitur_facilisis_phasellus_id_vulputate_augue_et_volutpat_sapien_curabitur_quis_pulvinar_odio_ac_sagittis_sapien_vestibulum_et_eros_sed_eros_malesuada_elementum_phasellus_vitae_magna_id_tortor_dignissim_fringilla_at_posuere_lacus_etiam_aliquet_elit_id_ipsum_pulvinar_faucibus_integer_semper_varius_nisi_at_fringilla">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ultrices ipsum, in condimentum augue. Phasellus quis tincidunt augue. Cras iaculis nibh a ex ultrices, in fermentum odio pretium. Aliquam nec est eu sem commodo feugiat. Sed sit amet mauris eu lorem efficitur facilisis. Phasellus id vulputate augue, et volutpat sapien. Curabitur quis pulvinar odio, ac sagittis sapien. Vestibulum et eros sed eros malesuada elementum. Phasellus vitae magna id tortor dignissim fringilla at posuere lacus. Etiam aliquet elit id ipsum pulvinar faucibus. Integer semper varius nisi at fringilla.</string>
    <string name="the_app_yuni_is_made_for_vitam_the_company_that_runs_the_canteens_on_the_tu_e_campus_it_allows_the_vitam_to_communicate_information_about_the_different_daily_menus_to_the_students_and_staff_who_visit_the_canteen_the_visitors_can_track_their_favourite_menu_items_and_see_where_the_closed_canteens_are_they_can_leave_and_read_reviews_on_canteens_and_dishes_as_well_as_seeing_general_information_about_canteens_including_opening_times_the_app_will_always_start_on_the_list_tab_of_this_page_you_can_navigate_via_the_top_bar_to_access_either_the_map_or_the_list_section_where_you_can_select_a_canteen_to_view_if_you_need_any_help_come_to_this_section_for_information_on_how_to_use_the_app_if_you_click_on_a_canteen_it_will_open_on_this_information_page_you_can_view_the_reviews_and_description_of_the_canteen_as_well_as_opening_hours_and_the_latest_reported_busyness">The app Yuni is made for VITAM, the company that runs the canteens on the Tu/e campus. It allows the VITAM to communicate information about the different daily menus to the students and staff who visit the canteen. The visitors can track their favourite menu items and see where the closed canteens are. They can leave and read reviews on canteens and dishes as well as seeing general information about canteens, including opening times. The app will always start on the list tab of this page. You can navigate via the top bar to access either the map or the list section where you can select a canteen to view. If you need any help, come to this section for information on how to use the app. If you click on a canteen it will open on this information page. You can view the reviews and description of the canteen, as well as opening hours and the latest reported busyness.</string>
    <string name="the_app_yuni_is_made_for_vitam_the_company_that_runs_the_canteens_on_the_tu_e_campus_it_allows_the_vitam_to_communicate_information_about_the_different_daily_menus_to_the_students_and_staff_who_visit_the_canteen_the_visitors_can_track_their_favourite_menu_items_and_see_where_the_closed_canteens_are_they_can_leave_and_read_reviews_on_canteens_and_dishes_as_well_as_seeing_general_information_about_canteens_including_opening_times_the_app_will_always_start_on_the_list_tab_of_this_page_you_can_navigate_via_the_top_bar_to_access_either_the_map_or_the_list_section_where_you_can_select_a_canteen_to_view_if_you_need_any_help_come_to_this_section_for_information_on_how_to_use_the_app_if_you_click_on_a_canteen_it_will_open_on_this_information_page_you_can_view_the_reviews_and_description_of_the_canteen_as_well_as_opening_hours_and_the_latest_reported_busyness_app_yuni_is_made_for_vitam_the_company_that_runs_the_canteens_on_the_tu_e_campus_it_allows_the_vitam_to_communicate_information_about_the_different_daily_menus_to_the_students_and_staff_who_visit_the_canteen_the_visitors_can_track_their_favourite_menu_items_and_see_where_the_closed_canteens_are_they_can_leave_and_read_reviews_on_canteens_and_dishes_as_well_as_seeing_general_information_about_canteens_including_opening_times_the_app_will_always_start_on_the_list_tab_of_this_page_you_can_navigate_via_the_top_bar_to_access_either_the_map_or_the_list_section_where_you_can_select_a_canteen_to_view_if_you_need_any_help_come_to_this_section_for_information_on_how_to_use_the_app_if_you_click_on_a_canteen_it_will_open_on_this_information_page_you_can_view_the_reviews_and_description_of_the_canteen_as_well_as_opening_hours_and_the_latest_reported_busyness">the_app_yuni_is_made_for_vitam_the_company_that_runs_the_canteens_on_the_tu_e_campus_it_allows_the_vitam_to_communicate_information_about_the_different_daily_menus_to_the_students_and_staff_who_visit_the_canteen_the_visitors_can_track_their_favourite_menu_items_and_see_where_the_closed_canteens_are_they_can_leave_and_read_reviews_on_canteens_and_dishes_as_well_as_seeing_general_information_about_canteens_including_opening_times_the_app_will_always_start_on_the_list_tab_of_this_page_you_can_navigate_via_the_top_bar_to_access_either_the_map_or_the_list_section_where_you_can_select_a_canteen_to_view_if_you_need_any_help_come_to_this_section_for_information_on_how_to_use_the_app_if_you_click_on_a_canteen_it_will_open_on_this_information_page_you_can_view_the_reviews_and_description_of_the_canteen_as_well_as_opening_hours_and_the_latest_reported_busyness_app_yuni_is_made_for_vitam_the_company_that_runs_the_canteens_on_the_tu_e_campus_it_allows_the_vitam_to_communicate_information_about_the_different_daily_menus_to_the_students_and_staff_who_visit_the_canteen_the_visitors_can_track_their_favourite_menu_items_and_see_where_the_closed_canteens_are_they_can_leave_and_read_reviews_on_canteens_and_dishes_as_well_as_seeing_general_information_about_canteens_including_opening_times_the_app_will_always_start_on_the_list_tab_of_this_page_you_can_navigate_via_the_top_bar_to_access_either_the_map_or_the_list_section_where_you_can_select_a_canteen_to_view_if_you_need_any_help_come_to_this_section_for_information_on_how_to_use_the_app_if_you_click_on_a_canteen_it_will_open_on_this_information_page_you_can_view_the_reviews_and_description_of_the_canteen_as_well_as_opening_hours_and_the_latest_reported_busyness</string>
    <string name="itemtitle">Name</string>
    <string name="description">Description</string>
    <string name="add_dish">Add Dish</string>
    <string name="upload_photo">Upload Photo</string>
    string>

    <!--MenuItemEditList-->
    <string name="confirmDeleteMessage">Are you sure you wish to delete this item?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Thijs -->
    <string-array name="canteen_array">
        <item>Atlas canteen</item>
        <item>Atlas sateh place</item>
        <item>Atlas veggie shop</item>
        <item>Auditorium canteen</item>
        <item>Auditorium grillz</item>
        <item>Flux canteen</item>
        <item>Gemini canteen</item>
        <item>Helix canteen</item>
        <item>Laplace canteen</item>
        <item>Metaforum canteen</item>
        <item>Traverse canteen</item>
        <item>Vertigo canteen</item>
    </string-array>
</resources>
