<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock" />

    <RadioGroup
        android:id="@+id/availabilityGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/outStockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stock_out" />

        <RadioButton
            android:id="@+id/inStockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stock_high" />

        <RadioButton
            android:id="@+id/lowStockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stock_low" />

    </RadioGroup>

    <Button
        android:id="@+id/setAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_availability_button" />

</LinearLayout>
