<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:id="@+id/imageContainer"
            android:background="@drawable/layout_bottom_stroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_marginStart="96dp"
                android:layout_marginEnd="96dp"
                android:scaleType="centerInside"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/busynessContainer"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:layout_below="@+id/imageContainer"
            android:background="@drawable/layout_bottom_stroke"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/busyness"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <com.tue.yuni.gui.util.TrafficLightIndicator
                    android:id="@+id/busyness"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/busynessText"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/busy"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/busynessContainer"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:id="@+id/openingHoursContainer"
            android:background="@drawable/layout_bottom_stroke"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/openingHours"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/monday"/>
                <TextView
                    android:id="@+id/mondayHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="9AM - 10PM"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tuesday"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tuesdayHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="9AM - 10PM"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/wednesday"/>
                <TextView
                    android:id="@+id/wednesdayHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="9AM - 10PM"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/thursday"/>
                <TextView
                    android:id="@+id/thursdayHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="9AM - 10PM"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/friday"/>
                <TextView
                    android:id="@+id/fridayHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="9AM - 10PM"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/saturday"/>
                <TextView
                    android:id="@+id/saturdayHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="9AM - 10PM"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/sunday"/>
                <TextView
                    android:id="@+id/sundayHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="9AM - 10PM"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionContainer"
            android:layout_below="@+id/openingHoursContainer"
            android:background="@drawable/layout_bottom_stroke"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/descriptionStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/reviewRatingContainer"
            android:layout_below="@+id/descriptionContainer"
            android:layout_width="match_parent"
            android:background="@drawable/layout_bottom_stroke"
            android:layout_height="wrap_content">
            <RatingBar
                android:id="@+id/reviewRating"
                android:isIndicator="true"
                android:layout_centerHorizontal="true"
                android:stepSize="0.5"
                android:rating="3"
                android:numStars="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/reviewsContainer"
                android:layout_below="@+id/reviewRating"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
            <Button
                android:id="@+id/sendReview"
                android:layout_below="@id/reviewsContainer"
                android:text="@string/feedback"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>