<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp">

        <EditText
            android:id="@+id/nameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:ems="10"
            android:hint="@string/itemtitle"
            android:inputType="textMultiLine" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:paddingTop="10sp">

        <EditText
            android:id="@+id/descriptionID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:autofillHints="coffee"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.41">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerInside"
            android:visibility="visible"
            tools:srcCompat="@tools:sample/backgrounds/scenic[3]" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/upload_photo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.11"
        android:paddingTop="10sp">

        <Spinner
            android:id="@+id/categoryspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:entries="@array/planets_array"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.11">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_dish"
            tools:text="Add Dish" />

    </RelativeLayout>


    <!--<View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="281dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
    -->
</LinearLayout>